change git repo

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "material2-srcs",
     "description": "Material Design components for Angular",
-    "homepage": "https://github.com/angular/material2",
-    "bugs": "https://github.com/angular/material2/issues",
+    "homepage": "https://github.com/olitvin/material2",
+    "bugs": "https://github.com/olitvin/material2/issues",
     "repository": {
         "type": "git",
-        "url": "https://github.com/angular/material2.git"
+        "url": "https://github.com/olitvin/material2.git"
     },
     "license": "MIT",
     "engines": {
